# Baxter_grasp_blocks

./: .gitignore  Current Progress Shipei.txt  Note.txt  README.md
arm_planning_lib/: CMakeLists.txt  CMakeLists.txt~  angles.txt  package.xml  package.xml~
arm_planning_lib/include/arm_planning_lib/: arm_planning_lib.h  arm_planning_lib.h~  arm_planning_lib_moveit.h
arm_planning_lib/launch/: arm_motion_client  arm_planning_lib.launch  arm_planning_lib_test.launch  moveit_planning_lib.launch  moveit_planning_lib.launch~
arm_planning_lib/src/: arm_planning_lib.cpp  arm_planning_lib.cpp~  arm_planning_lib_moveit.cpp  arm_planning_lib_test.cpp  gripper.cpp
gripper_move/: CMakeLists.txt  CMakeLists.txt~  package.xml
gripper_move/include/gripper_move/: grippermove.h
gripper_move/src/: grippermove.cpp  grippermove.cpp~  grtest.cpp  torque.cpp
gripper_test/: CMakeLists.txt  CMakeLists.txt~  package.xml~
gripper_test/action/: dgripper.action~  grippertest.action
gripper_test/src/: gripper_action_client.cpp~  gripper_test_sever.cpp
image_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
image_test/src/: fp.cpp  fp.cpp.backup  pcl_emotion_test.cpp
overall_executer/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
overall_executer/launch/: kinect_gripper.launch  overall_executer.launch
overall_executer/src/: fp.cpp  fp.cpp~
pcl_chen/: CMakeLists.txt  README  baxter_world.launch  kinect_xform.launch  package.xml
pcl_chen/include/pcl_chen/: pcl_grabing.h
pcl_chen/src/: pcl_emotion_test.cpp  pcl_grabing.cpp  pcl_grabing.cpp~  pcl_grabing_test_main.cpp  pcl_grabing_test_main.cpp~
